# architecture-ai-projects

./: .gitignore  README.md
MCP/: README.md
MCP/API/user_management/: README.md  main.py  models.py  pyproject.toml  user_routes.py
MCP/MCP Client/.github/: copilot-instructions.md
MCP/user-mgmt-mcpserver/: README.md  pyproject.toml  user-tools-mcp.mdx  user-tools-mcp.py  user-tools.py
RAG/: .gitignore  README.md  __init__.py  app.py  main.py  rag_client.py  requirements.txt
crew-ai/: L2_research_write_article.ipynb  requirements.txt
social_media_agents/: langgraph_workflow.py
