[project]
name = "user-mgmt-mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-mcp>=0.4.0",
    "mcp-server>=0.1.0",
    "mcp[cli]>=1.13.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
